@@ -378,6 +378,7 @@ Application::Application (gcugtk::CmdContextGtk *cc):
 		AddRule ("reaction-operator", RuleMustBeIn, "reaction-step");
 		AddRule ("reactant", RuleMayContain, "molecule");
 		AddRule ("reactant", RuleMayContain, "text");
+		AddRule ("reactant", RuleMayContain, "mesomery");
 		AddRule ("mesomer", RuleMustContain, "molecule");
 		AddRule ("mesomer", RuleMustBeIn, "mesomery");
 		AddRule ("mesomery", RuleMustContain, "mesomer");
