@@ -1,6 +1,9 @@
 Version 0.13.99
 	GChemPaint:
 		* Fix squiggle bonds period.
+		* Allow brackets around a mesomery.
+		* Allow a mesomery inside a reaction.
+		* Fixed some meomory access issues.
 
 Version 0.13.98
 	GChemPaint:
